fixed the loading page css issues. Some of the class tags were class- instead of class= and added white-space: nowrap; and overflow: hidden; to those tags so that text doesn't wrap around and mess up spacing

--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,8 @@ body {
 	margin: 0px 80px 0px 15px;
 	float: left;
 	width: 25%;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .set-number {
@@ -229,6 +231,11 @@ body {
 /* Loading Workout */
 .workout-name {
 	margin-right: 80px;
+}
+
+.workout-description {
+	white-space: nowrap;
+	overflow: hidden;	
 }
 
 /* Coach Student View */
